--- a/booktracker/src/app/books/add-book/add-book.component.html
+++ b/booktracker/src/app/books/add-book/add-book.component.html
@@ -1,3 +1,4 @@
+<lib-thanks-contributor></lib-thanks-contributor>
 <div class="col-lg-5">
   <div class="well bs-component">
     <form #addBookForm="ngForm" (ngSubmit)="saveBook(addBookForm.value)" class="form-horizontal">
