--- a/booktracker/src/app/readers/add-reader/add-reader.component.html
+++ b/booktracker/src/app/readers/add-reader/add-reader.component.html
@@ -1,3 +1,4 @@
+<lib-reader-greeting></lib-reader-greeting>
 <div class="col-lg-5">
   <div class="well bs-component">
     <form #addReaderForm="ngForm" (ngSubmit)="saveReader(addReaderForm.value)" class="form-horizontal">
