added components needed for @input/@output demo (TAG: input_output_demo_start)

--- a/booktracker/src/app/app.component.html
+++ b/booktracker/src/app/app.component.html
@@ -16,6 +16,7 @@
             <ul class="nav navbar-nav">
                 <li><a [routerLink]="['/addbook']">Add Book<span class="sr-only">(current)</span></a></li>
                 <li><a [routerLink]="['/addreader']">Add Reader</a></li>
+                <li><a [routerLink]="['/library']">Library</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
