--- a/booktracker/src/app/readers/edit-reader/edit-reader.component.html
+++ b/booktracker/src/app/readers/edit-reader/edit-reader.component.html
@@ -33,6 +33,7 @@
         <div class="form-group">
           <div class="col-lg-10 col-lg-offset-3">
             <button type="button" class="btn btn-primary" (click)="saveChanges()">Save</button>
+            <button type="button" class="btn btn-success" (click)="setReaderOfTheMonth()">Reader of the Month</button>
           </div>
         </div>
       </fieldset>
