--- a/booktracker/src/app/app.component.html
+++ b/booktracker/src/app/app.component.html
@@ -14,8 +14,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a [routerLink]="['/addbook']">Add Book<span class="sr-only">(current)</span></a></li>
-                <li><a [routerLink]="['/addreader']">Add Reader</a></li>
+                <li><a [routerLink]="['/addbook']" (click)="logActivity('Adding a book.')">Add Book<span class="sr-only">(current)</span></a></li>
+                <li><a [routerLink]="['/addreader']" (click)="logActivity('Adding a reader.')">Add Reader</a></li>
                 <li><a [routerLink]="['/library']">Library</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
@@ -23,3 +23,5 @@
 </nav>
 
 <router-outlet></router-outlet>
+
+<app-activity-log></app-activity-log>
