--- a/booktracker/src/app/dashboard/dashboard.component.html
+++ b/booktracker/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         <div class="panel-body">
         <li *ngFor='let book of allBooks'>
           <i>{{book.title}}</i>
-          <a [routerLink]="['/editbook', book.bookID]"> Edit </a>
+          <a [routerLink]="['/editbook', book.bookID]" (click)="logActivity('Editing book ' + book.title)"> Edit </a>
           <a (click)="deleteBook(book.bookID)">Delete</a>
         </li>
         </div>
@@ -25,7 +25,7 @@
         <div class="panel-body">
         <li *ngFor='let reader of allReaders'>
           {{reader.name}}
-          <a [routerLink]="['/editreader', reader.readerID]">Edit</a>
+          <a [routerLink]="['/editreader', reader.readerID]" (click)="logActivity('Editing reader ' + reader.name)">Edit</a>
           <a (click)="deleteReader(reader.readerID)"> Delete </a>
         </li>
         </div>
