added code for lazy loading demo (TAG: lazy_loading_demo_complete)

--- a/booktracker/src/app/app.component.html
+++ b/booktracker/src/app/app.component.html
@@ -14,7 +14,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a [routerLink]="['/addbook']" (click)="logActivity('Adding a book.')">Add Book<span class="sr-only">(current)</span></a></li>
+                <li><a [routerLink]="['/books/addbook']" (click)="logActivity('Adding a book.')">Add Book<span class="sr-only">(current)</span></a></li>
                 <li><a [routerLink]="['/addreader']" (click)="logActivity('Adding a reader.')">Add Reader</a></li>
                 <li><a [routerLink]="['/library']">Library</a></li>
             </ul>
